# monasca-transform

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  README.md  README.rst  lower-constraints.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
devstack/: README.md  plugin.sh  post_test_hook.sh  settings  test.sh
devstack/files/monasca-transform/: driver.py  monasca-transform  monasca-transform.conf  monasca-transform.service  monasca-transform_mysql.sql  monasca_transform_init.conf  service_runner.py  start-monasca-transform.sh
devstack/files/spark/: spark-defaults.conf  spark-env.sh  spark-master.conf  spark-master.service  spark-worker-env.sh  spark-worker.conf  spark-worker.service  start-spark-master.sh  start-spark-worker.sh
doc/source/: conf.py  index.rst
docs/: create-new-aggregation-pipeline.md  data_formats.md  generic-aggregation-components.md
etc/: monasca-transform.conf
monasca_transform/: log_utils.py  mysql_offset_specs.py  offset_specs.py
monasca_transform/component/: __init__.py  component_utils.py
monasca_transform/component/insert/: __init__.py  dummy_insert.py  kafka_insert.py  kafka_insert_pre_hourly.py  prepare_data.py
monasca_transform/component/setter/: __init__.py  pre_hourly_calculate_rate.py  rollup_quantity.py  set_aggregated_metric_name.py  set_aggregated_period.py
monasca_transform/component/usage/: __init__.py  calculate_rate.py  fetch_quantity.py  fetch_quantity_util.py
monasca_transform/config/: config_initializer.py
monasca_transform/data_driven_specs/: data_driven_specs_repo.py  json_data_driven_specs_repo.py  mysql_data_driven_specs_repo.py
monasca_transform/data_driven_specs/pre_transform_specs/: pre_transform_specs.json
monasca_transform/data_driven_specs/transform_specs/: transform_specs.json
monasca_transform/db/: db_utils.py
monasca_transform/driver/: mon_metrics_kafka.py
monasca_transform/messaging/: adapter.py
monasca_transform/processor/: __init__.py  pre_hourly_processor.py  processor_util.py
monasca_transform/service/: transform_service.py
monasca_transform/transform/: __init__.py  storage_utils.py  transform_utils.py
monasca_transform/transform/builder/: generic_transform_builder.py
monasca_transform/transform/grouping/: __init__.py  group_sort_by_timestamp.py  group_sort_by_timestamp_partition.py  group_sortby_timestamp.py  group_sortby_timestamp_partition.py
releasenotes/notes/: drop-py-2-7-297320bc1d9f0280.yaml
scripts/: create_zip.py  create_zip.sh  generate_ddl.sh  generate_ddl_for_devstack.sh  make_egg.sh  pyspark-shell.sh  submit_mon_metrics_kafka.sh
scripts/ddl/: generate_ddl.py  pre_transform_specs_template.sql  transform_specs_template.sql
tests/functional/: __init__.py  json_offset_specs.py  spark_context_test.py  test_json_kafka_offsets.py  test_mysql_kafka_offsets.py
tests/functional/builder/: test_transform_builder.py
tests/functional/config/: config_initializer_test.py
tests/functional/data_driven_specs/: json_data_driven_specs_repo.py  test_data_driven_specs.py
tests/functional/db/: test_db_util.py
tests/functional/driver/: __init__.py  first_attempt_at_spark_test.py  test_first_attempt_at_spark.py
tests/unit/: spark_context_test.py  test_json_kafka_offsets.py  test_mysql_kafka_offsets.py
tools/vagrant/: Vagrantfile  install.sh  local.conf  monasca-api-plugin.sh  provision-devstack.sh  provision-pg-tips.sh  refresh_monasca_transform.sh  settings.xml  setup_local_repos.sh  setup_maven_proxy.sh
(+80 files in other folders)
