[metadata]
name=monasca_transform
description-file = README.md
keywords=
    openstack
    monitoring
license=Apache-2
summary=Data aggregation for metrics
author=Calvin, Flint;Agate, Ashwin;Kennedy, David
author-email=monasca-transform@hpe.com
home-page=https://wiki.hpcloud.net/display/iaas/Spark+Evaluation
version=0.0.1

[wheel]
universal = 1

[files]
packages =
    monasca_transform

[entry_points]
monasca_transform.usage =
    calculate_rate = monasca_transform.component.usage.calculate_rate:CalculateRate
    fetch_quantity = monasca_transform.component.usage.fetch_quantity:FetchQuantity
    fetch_quantity_util = monasca_transform.component.usage.fetch_quantity_util:FetchQuantityUtil

monasca_transform.setter =
    set_aggregated_metric_name = monasca_transform.component.setter.set_aggregated_metric_name:SetAggregatedMetricName
    set_aggregated_period = monasca_transform.component.setter.set_aggregated_period:SetAggregatedPeriod
    rollup_quantity = monasca_transform.component.setter.rollup_quantity:RollupQuantity

monasca_transform.insert =
      prepare_data = monasca_transform.component.insert.prepare_data:PrepareData
      insert_data = monasca_transform.component.insert.kafka_insert:KafkaInsert
      insert_data_pre_hourly = monasca_transform.component.insert.kafka_insert_pre_hourly:KafkaInsertPreHourly

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]
autodoc_index_modules = True

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
