[metadata]
name=monasca_transform
summary=Data Aggregation and Transformation component for Monasca
description-file = README.rst
author= OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page=https://wiki.openstack.org/wiki/Monasca/Transform
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[wheel]
universal = 1

[files]
packages =
    monasca_transform

[entry_points]
monasca_transform.usage =
    calculate_rate = monasca_transform.component.usage.calculate_rate:CalculateRate
    fetch_quantity = monasca_transform.component.usage.fetch_quantity:FetchQuantity
    fetch_quantity_util = monasca_transform.component.usage.fetch_quantity_util:FetchQuantityUtil

monasca_transform.setter =
    set_aggregated_metric_name = monasca_transform.component.setter.set_aggregated_metric_name:SetAggregatedMetricName
    set_aggregated_period = monasca_transform.component.setter.set_aggregated_period:SetAggregatedPeriod
    rollup_quantity = monasca_transform.component.setter.rollup_quantity:RollupQuantity

monasca_transform.insert =
      prepare_data = monasca_transform.component.insert.prepare_data:PrepareData
      insert_data = monasca_transform.component.insert.kafka_insert:KafkaInsert
      insert_data_pre_hourly = monasca_transform.component.insert.kafka_insert_pre_hourly:KafkaInsertPreHourly

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]
warnerrors = True
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
